[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menus/main.gd" type="Script" id=2]

[node name="MainMenu" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="UsersButton" type="Button" parent="GridContainer"]
margin_right = 510.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "Users"

[node name="ImagesButton" type="Button" parent="GridContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "Images"

[node name="ActivitiesButton" type="Button" parent="GridContainer"]
margin_top = 68.0
margin_right = 510.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "Activities"

[node name="Relationships" type="Button" parent="GridContainer"]
margin_left = 514.0
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "Relationships"

[node name="Networking" type="Button" parent="GridContainer"]
margin_top = 136.0
margin_right = 510.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
text = "Networking"

[connection signal="button_up" from="GridContainer/UsersButton" to="." method="_on_users_button_up"]
[connection signal="button_up" from="GridContainer/ImagesButton" to="." method="_on_images_button_up"]
[connection signal="button_up" from="GridContainer/ActivitiesButton" to="." method="_on_activities_button_up"]
[connection signal="button_up" from="GridContainer/Relationships" to="." method="_on_relationships_button_up"]
[connection signal="button_up" from="GridContainer/Networking" to="." method="_on_networking_button_up"]
